--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <header class="fondo-distinto">
       <nav>
-        <a href="index0.html">Inicio</a>
-        <a href="index6.html">fotografía</a>
-        <a href="index1.html">MQUC</a>
+        <a href="index.html">Inicio</a>
+        <a href="index7.html">fotografía</a>
+        <a href="index2.html">MQUC</a>
         <a href="https://www.instagram.com/diwg.0/">Contacto</a>
       </nav>
       <section class="textos-header">
@@ -49,14 +49,14 @@
       <div class="foto-fondo">
         <h3>Fotografía</h3>
         <p>Aquí encontraras parte de mis fotografias</p>
-        <form action="index6.html">
+        <form action="index7.html">
           <button>Ir</button>
         </form>
       </div> 
       <div class="foto-fondo4">
         <h3>Camisetas</h3>
         <p>Aquí encontraras parte de mi colección</p>
-        <form action="index1.html">
+        <form action="index2.html">
           <button>Ir</button>
         </form>
       </div> 
