--- a/index9.html
+++ b/index9.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blanco y negro fotografía</title>
+    <title>Color fotografía</title>
     <link rel="shortcut icon" href="img/fondofotos.JPG" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
           <a href="https://www.instagram.com/diwg.0/">Contacto</a>
         </nav>
         <section class="textos-header">
-          <h1>Blanco y negro</h1>    
+          <h1>Color</h1>    
           <h2>Fotografía</h2>
         </section>
         <div Class="wave" style=height:150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div> 
@@ -31,23 +31,33 @@
     <div class="galeria">
         <div class="contenedor-imagenes">
             <div class="imagen">
-                <img src="img/pajaro.jpg" alt="">
+                <img src="img/pajaro2.JPG" alt="">
             </div>
             <div class="imagen">
-                <img src="img/playa.JPG" alt="">
+                <img src="img/paisa2.JPG" alt="">
             </div>
             <div class="imagen">
-                <img src="img/abuelo.JPG" alt="">
+                <img src="img/caballo.JPG" alt="">
             </div>
             <div class="imagen">
-                <img src="img/auto.jpg" alt="">
+                <img src="img/rosa.jpg" alt="">
             </div>
             <div class="imagen">
-                <img src="img/avion.JPG" alt="">
+                <img src="img/paisa3.JPG" alt="">
                
             </div>
             <div class="imagen">
-                <img src="img/concierto.jpg" alt="">
+                <img src="img/pajaro3.jpg" alt="">
+            </div>
+            <div class="imagen">
+                <img src="img/ovejas.JPG" alt="">
+            </div>
+            <div class="imagen">
+                <img src="img/pajaro2.JPG" alt="">
+               
+            </div>
+            <div class="imagen">
+                <img src="img/paisa1.jpg" alt="">
             </div>
     </div>
     <footer class="fo3">
