--- a/index5.html
+++ b/index5.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camisetas especiales</title>
+    <title>Camisetas arquero</title>
     <link rel="shortcut icon" href="img/MQUC.PNG" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,78 +16,72 @@
 
     <header>
         <nav>
-          <a href="index0.html">Inicio</a>
-          <a href="index6.html">fotografía</a>
-          <a href="index1.html">MQUC</a>
+          <a href="index.html">Inicio</a>
+          <a href="index7.html">fotografía</a>
+          <a href="index2.html">MQUC</a>
           <a href="https://www.instagram.com/masqueunacoleccion_udechile/">Contacto</a>
         </nav>
         <section class="textos-header">
-          <h1>Camisetas especiales</h1>    
+          <h1>Camisetas arquero</h1>    
           <h2>Más que una colección</h2>
         </section>
         <div Class="wave" style=height:150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div> 
     </header>
     
     <div class="galeria">
-        <div class="contenedor-imagenes">      
+        <div class="contenedor-imagenes">
             <div class="imagen">
-                <img src="img/2009E.jpeg" alt="">
+                <img src="img/2012A.jpg" alt="">
                 <div class="overlay">
-                    <h2>Retro 80's 2009</h2>
+                    <h2>2012</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="img/Ballet.jpg" alt="">
+                <img src="img/2013A.JPG" alt="">
                 <div class="overlay">
-                    <h2>Conmemorativa Ballet Azul 2016</h2>
+                    <h2>2013</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="img/2017E.jpg" alt="">
+                <img src="img/2014A.jpg" alt="">
                 <div class="overlay">
-                    <h2>90 años 2017</h2>
+                    <h2>2014</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="img/2018E.jpg" alt="">
+                <img src="img/2015A.jpg" alt="">
                 <div class="overlay">
-                    <h2>Retro 80's 2018</h2>
+                    <h2>2015</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="img/2018E2.jpg" alt="">
+                <img src="img/2016A.JPG" alt="">
                 <div class="overlay">
-                    <h2>Día mundial sin auto 2018</h2>
+                    <h2>2016</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="img/2019E.jpeg" alt="">
+                <img src="img/2016A2.jpeg" alt="">
                 <div class="overlay">
-                    <h2>/0 años Adidas 2019</h2>
+                    <h2>2016</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="img/2020E.jpeg" alt="">
+                <img src="img/2019A.jpeg" alt="">
                 <div class="overlay">
-                    <h2>Luto Carlos Campos 2020</h2>
+                    <h2>2019</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="img/2021E.jpeg" alt="">
+                <img src="img/2020A.JPG" alt="">
                 <div class="overlay">
-                    <h2>10° Aniversario Copa Sudamericana 2021</h2>
+                    <h2>2020</h2>
                 </div>
             </div>
             <div class="imagen">
-                <img src="img/2022E.jpeg" alt="">
+                <img src="img/2022A.jpg" alt="">
                 <div class="overlay">
-                    <h2>Pre Temporada 2022</h2>
-                </div>
-            </div>
-            <div class="imagen">
-                <img src="img/2022E2.jpeg" alt="">
-                <div class="overlay">
-                    <h2>Luto Leonel Sánchez 2022</h2>
+                    <h2>2022</h2>
                 </div>
             </div>
             <!-- <div class="imagen">
