--- a/index2.html
+++ b/index2.html
@@ -36,13 +36,16 @@
           Considero que las camisetas son más que una prenda de vestir, pueden trasmitir historias y recuerdos.
           <br>
           <br>
-          En 2016 comencé a adquirir camisetas de forma más seguida y comencé con la coleccíon. 
+          En 2016 comencé a adquirir camisetas de forma más seguida e inicié la coleccíon. 
           <br>
           <br>
-          Actualmente la colección cuenta con aproxiamdamente 50 camisetas, donde se puende encontarar desde el año 1996 hasta la actualidad.
+          Actualmente la colección cuenta con 55 camisetas, donde se puende encontarar desde el año 1996 hasta la actualidad.
           <br>
           <br>
-          En 2020 abrí un instagram dedicado a la coleción, llamado "Más que una colección" el cual me permite compartir y conocer más sobre el coleccionismo de camisetas, a nivel nacional e internacional.
+          Todas las camisetas son de carácter original, ya que, como futuro diseñador respeto el derecho de autor y voy en contra de las falsificaciones, lo cual además se considera ilegal.
+          <br>
+          <br>
+          A principios de 2021 abrí un instagram dedicado a la coleción, llamado "Más que una colección" el cual me permite compartir y conocer más sobre el coleccionismo de camisetas, a nivel nacional e internacional.
           <br>
           <br>
           En las siguientes galerías se encuentran todas las camisetas de la colección, dividas por categorías y en orden cronológico.
@@ -60,8 +63,8 @@
      <h2 class="titulo">Camisetas</h2>
     <div  class="categorias">
       <div class="carta">
-        <h3>Camisetas local</h3>
-        <p>Aquí encontraras algunas camisetas local desde 1996 hasta 2021</p>
+        <h3>Camisetas<br>local</h3>
+        <p>Aquí encontraras algunas camisetas local desde 1996 hasta 2022</p>
         <form action="index3.html">
           <button>Ir</button>
         </form>
