--- a/index3.html
+++ b/index3.html
@@ -27,6 +27,18 @@
         <div Class="wave" style=height:150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div> 
     </header>
     
+    <section class="contenedor Sobre-nosotros" >
+        <div class="contenedor-sobre-nosotros"> 
+          <div class="contenido-textos">
+            <h2 class="titulo" >Un poco de historia</h2>
+            <p>El color principal del Club universidad de Chile es el azul, usado desde 1934 en su camiseta y desde 1957 en su uniforme completo.<br><br>Una tesis establece que el color está inspirado en la Casa Central de la Universidad de Chile, cuya antigua fachada había sido pintada de ese color, aunque no existen pruebas de que ello realmente haya sucedido.<br><br> Otra interpretación es que el azul es un color relacionado con las humanidades y el saber en general, que son el motivo de existencia de la casa de estudios.<br><br>Actualmente en la colección se cuenta con 21 camisetas local.
+            </p>
+            
+          </div>
+        </div>
+       </section>
+
+       <h2 class="titulo" >Algunas camisetas local desde 1996 a 2022</h2>
     <div class="galeria">
         <div class="contenedor-imagenes">
             <div class="imagen">
