--- a/index4.html
+++ b/index4.html
@@ -28,6 +28,18 @@
         <div Class="wave" style=height:150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div> 
     </header>
     
+    <section class="contenedor Sobre-nosotros" >
+        <div class="contenedor-sobre-nosotros"> 
+          <div class="contenido-textos">
+            <h2 class="titulo" >Un poco de historia</h2>
+            <p>Como color secundario, y usado actualmente en el uniforme de recambio, el club ha adoptado el blanco, que fue el color principal desde su fundación como Internado Football Club en 1911 hasta su reestructuración en el Club Deportivo de la Universidad de Chile en 1934.<br><br> En algunas ocaciones se ha utilzado el color rojo, los que junto al azul forman parte del escudo del club. <br><Br> En 2013, por primera vez en la historia, fue impuesto el amarillo como color de recambio, usado de manera excepcional en la indumentaria alternativa de aquel año (camiseta no presente en la colección actualmente) También en 2021 fue utilizado el rosa en la indumentaria visitante.<br><br>Actualmente en la colección se cuenta con 15 camisetas visita.
+            </p>
+            
+          </div>
+        </div>
+       </section>
+
+       <h2 class="titulo" >Algunas camisetas visita desde 2007 a 2022</h2>
     <div class="galeria">
         <div class="contenedor-imagenes">
             <div class="imagen">
