--- a/index7.html
+++ b/index7.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fotografía Diego Torres</title>
-  <link rel="shortcut icon" href="img/fondofotos.JPG" type="image/x-icon">
+  <link rel="shortcut icon" href="img/diego.png" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
           Mi tipo de fotografía se ve influenciada por el lugar donde crecí, es por esto que mi preferencias para fotografiar son entornos naturales y exteriores donde pueda encontrar una estética de mi agrado.
           <br>
           <br>
-          En temas de edicción me inclino por las características que entrega una foto análoga, tonos oscuros y ruido. 
+          En temas de edicción me inclino por las características que entrega una foto análoga, tonos oscuros y grano. 
           <br>
           <br>
           Para mi la fotografía es una forma de expresar estados de ánimos y permite entregar una visión propia del enterno.
