--- a/index5.html
+++ b/index5.html
@@ -28,6 +28,7 @@
         <div Class="wave" style=height:150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div> 
     </header>
     
+    <h2 class="titulo" >Algunas camisetas de arquero desde 2012 a 2022</h2>
     <div class="galeria">
         <div class="contenedor-imagenes">
             <div class="imagen">
