--- a/index6.html
+++ b/index6.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camisetas especiales</title>
-    <link rel="shortcut icon" href="img/MQUC.PNG" type="image/x-icon">
+    <link rel="shortcut icon" href="img/diego.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,6 +28,7 @@
         <div Class="wave" style=height:150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div> 
     </header>
     
+    <h2 class="titulo" >Algunas camisetas espsciales desde 2009 a 2022</h2>
     <div class="galeria">
         <div class="contenedor-imagenes">      
             <div class="imagen">
