--- a/index6.html
+++ b/index6.html
@@ -64,7 +64,7 @@
             <div class="imagen">
                 <img src="img/2019E.jpeg" alt="">
                 <div class="overlay">
-                    <h2>/0 años Adidas 2019</h2>
+                    <h2>70 años Adidas 2019</h2>
                 </div>
             </div>
             <div class="imagen">
