--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <div class="contenedor-sobre-nosotros"> 
        <div class="contenido-textos">
          <h2 class="titulo">De qué trata</h2>
-         <p>Mi nombre es Diego Torres, estudiante de diseño de la Pontificia Universidad Católica de Valparaíso.
+         <p>Mi nombre es Diego Torres, estudiante de Diseño en la Pontificia Universidad Católica de Valparaíso.
          <br>
          <br>
          Esta bítacora está dedicada y expone parte de mis hobbies, a los cuales le he didacado gran parte de mi tiempo en los últimos años.
