--- a/index7.html
+++ b/index7.html
@@ -51,7 +51,7 @@
     
 <section id="imagenes">
   <div class="contenedor">
-     <h2 class="titulo">Categorias</h2>
+     <h2 class="titulo">Categorías</h2>
     <div  class="categorias">
       <div class="foto-fondo2">
         <h3>Blanco y negro</h3>
