--- a/index7.html
+++ b/index7.html
@@ -15,7 +15,7 @@
   <header class="fondo-distinto2">
       <nav>
         <a href="index.html">Inicio</a>
-        <a href="index7.html">fotografía</a>
+        <a href="index7.html">Fotografía</a>
         <a href="index2.html">MQUC</a>
         <a href="https://www.instagram.com/diwg.0/">Contacto</a>
       </nav>
@@ -23,7 +23,7 @@
         <h1>Fotografía</h1>    
         <h2>Diego Torres</h2>
       </section>
-      <div Class="wave" style=height:150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div> 
+      <div Class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M-18.96,83.39 C256.43,9.38 386.23,224.50 534.09,13.31 L500.00,150.00 L-48.30,248.19 Z" style="stroke: none; fill: white;"></path></svg></div>
   </header>
   <main>
     <section class="contenedor Sobre-nosotros" >
