--- a/index6.html
+++ b/index6.html
@@ -17,7 +17,7 @@
     <header>
         <nav>
           <a href="index.html">Inicio</a>
-          <a href="index7.html">fotografía</a>
+          <a href="index7.html">Fotografía</a>
           <a href="index2.html">MQUC</a>
           <a href="https://www.instagram.com/masqueunacoleccion_udechile/">Contacto</a>
         </nav>
@@ -25,7 +25,7 @@
           <h1>Camisetas especiales</h1>    
           <h2>Más que una colección</h2>
         </section>
-        <div Class="wave" style=height:150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div> 
+        <div Class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M-18.96,83.39 C256.43,9.38 386.23,224.50 534.09,13.31 L500.00,150.00 L-48.30,248.19 Z" style="stroke: none; fill: white;"></path></svg></div>
     </header>
     
     <h2 class="titulo" >Algunas camisetas espsciales desde 2009 a 2022</h2>
